Sat Jun 19 09:47:38 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* README.Windows: add initial README file for windows

Fri Jun 18 21:48:50 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c: defer prepare

Fri Jun 18 21:33:02 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c src/odbc/odbc_util.c:
	- Move prepare code to odbc_prepare

Fri May 21 17:18:05 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/apps/bsqldb.c src/apps/fisql/fisql.c src/dblib/dblib.c:
	- handle column size for SYBDATETIMN data type (Craig A. Berry)

Fri May 21 16:10:04 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/apps/freebcp.c src/apps/freebcp.h:
	- add -i and -o options to freebcp (patch from Craig A. Berry)

Fri May 21 16:01:47 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* vms/Makefile.am vms/descrip_mms.template vms/edit.c:
	* vms/getpass.c:
	- update VMS build files (patch from Craig A. Berry).

Fri May 21 15:53:53 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/apps/freebcp.c:
	- freebcp's direction doesn't need to be case sensitive (from Craig
	  A. Berry).

Fri May 14 00:06:28 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac win32/Makefile.am win32/freetds.nsi:
	- remove Dev-C++ project files (obsolete)

Wed May 12 13:18:25 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/replacements/fakepoll.c: small compile fix for Visual Studio

Wed May 12 10:15:04 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/fakepoll.h src/replacements/fakepoll.c:
	- fix and improve fakepoll for Windows

Wed May 12 10:13:17 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds_sysdep_private.h: fix minor issue with MingW

Wed May 12 09:59:17 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/net.c: workaround for header incompatibility

Mon May 10 17:10:10 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>